syntax="proto3";

package nygpostprotoc;

option go_package="app/nygpostprotoc";

// profile
service NYGPostProfile{
rpc RecieveNYGProfile(NYGProfileParam)returns(TypeNYGProfile){}
rpc RecieveNYGDeck(NYGDeckParam)returns (TypeNYGDeck){}
rpc RecieveNYGCredits(NYGPlayerCreditsParam)returns (TypeNYGCredit){}
}

message TypeNYGProfile{
    string id=1;
    string name=2;
    string nickname=3;
}

message TypeNYGGameProfile{
    int32 gamesPlayed=1;
    string tier=2;
    int32 rating=3;
    int32 points=4;
}

message NYGProfileParam{
    string id=1;
}
// end profile

// deck
// service NYGDeck {
// }

message TypeNYGDeck{
    string id =1;
    string first=2;
    string second=3;
    bool isDefault=4;
}
message NYGDeckParam{
    string id=1;
}
// end deck

// playerCredits
// service NYGCredits{
// }
message TypeNYGCredit{
	string coins=1;
	string spurs=2;
	string boardTheme=3;
	string guessTheme=4;
	string id=5;
    TypeNYGGameProfile clashProfile=6;
    TypeNYGGameProfile onevoneProfile=7;
    TypeNYGGameProfile twovtwoProfile=8;
    string imgURL=9;
    int32 nexus=10;
    int32 freeze=11;
}

message NYGPlayerCreditsParam{
    string id=1;
}

// end playerCredits

